[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fonts/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/friends.gd" type="Script" id=2]

[node name="friends" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
color = Color( 0.027451, 0.572549, 0.596078, 1 )

[node name="NameInput" type="LineEdit" parent="background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -190.0
margin_top = 150.0
margin_right = 510.0
margin_bottom = 210.0
theme = ExtResource( 1 )

[node name="NameLabel" type="Label" parent="background"]
margin_left = 133.0
margin_top = 158.0
margin_right = 293.0
margin_bottom = 204.0
theme = ExtResource( 1 )
text = "Imię"

[node name="FindButton" type="Button" parent="background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -73.0
margin_top = 476.0
margin_right = 127.0
margin_bottom = 576.0
theme = ExtResource( 1 )
text = "Dodaj"

[node name="Notification" type="Label" parent="background"]
margin_left = 288.0
margin_top = 380.0
margin_right = 988.0
margin_bottom = 440.0
theme = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="background"]
margin_left = 227.0
margin_top = 617.0
margin_right = 927.0
margin_bottom = 917.0
rect_min_size = Vector2( 700, 300 )

[node name="VBoxContainer" type="VBoxContainer" parent="background/ScrollContainer"]

[node name="SurnameLabel" type="Label" parent="background"]
margin_left = 133.0
margin_top = 270.0
margin_right = 279.0
margin_bottom = 316.0
theme = ExtResource( 1 )
text = "Nazwisko"

[node name="SurnameInput" type="LineEdit" parent="background"]
margin_left = 350.0
margin_top = 270.0
margin_right = 1050.0
margin_bottom = 330.0
theme = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="backButton" type="Button" parent="."]
margin_left = 849.0
margin_top = 30.0
margin_right = 1049.0
margin_bottom = 130.0
theme = ExtResource( 1 )
text = "Powrót"

[connection signal="pressed" from="background/FindButton" to="." method="_on_FindButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
